# Scrapping

./: Diagramme sans nom.drawio
Movies_scraper_1/: pyproject.toml
Movies_scraper_1/moviesscraper/: 25_movies.csv  25_series.csv  allomovies.csv  scrapy.cfg
Movies_scraper_1/moviesscraper/moviesscraper/: database.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
Movies_scraper_1/moviesscraper/moviesscraper/spiders/: allomoviesspider.py  moviesspider.py  seriesspider.py
