[tool.poetry]
name = "movies-scraper-1"
version = "0.1.0"
description = "scrapy pour mise en pratique"
authors = ["Lnd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.31"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
